--- a/portal/templates/questions_anon.html
+++ b/portal/templates/questions_anon.html
@@ -1,101 +1,97 @@
 {% extends "layout.html" %}
 {% block main %}
-<div class="container">
+
+<div class="well">
+
+    <h3 class="tnth-headline">TrueNTH</h3>
+
+    <hr />
+    <h4>Explore on Your Own</h4>
+    <p>You can access all TrueNTH content, but we won't be able to personalize it for you.</p>
+    <br />
+
     <div class="row">
-        <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-            <div class="well lead-well">
+        <div class="col-xs-6">
 
-                <h3>TrueNTH</h3>
+            <h4>What Are You Looking For?</h4>
 
-                <hr />
-                <h4>Explore on Your Own</h4>
-                <p>You can access all TrueNTH content, but we won't be able to personalize it for you.</p>
-                <br />
-
-                <div class="row">
-                    <div class="col-xs-6">
-
-                        <h4>What Are You Looking For?</h4>
-
-                    </div>
-                    <div class="col-xs-6">
-                        <h4>Browse TrueNTH Content</h4>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-6">
-
-                        <p><strong>Would you like to explore treatment decision-making for early stage prostate cancer?</strong></p>
-                        <div>
-                            <div class="btn btn-default pat-q" name="decision" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default pat-q" name="decision" data-value="false">No</div><br />
-                            <p style="display: none; margin-top: 1em; font-style: italic">Great, we suggest viewing <strong>Decision Support</strong>.</p>
-                        </div>
-                        <br />
-
-                    </div>
-                    <div class="col-xs-6">
-                        <a id="decision" href="{{ config['DECIDING_INTERVENTION'] }}"
-                           class="btn btn-block btn-default btn-lg" style="white-space: normal">
-                            Decision Support<br />
-                            <small>Which option is best for me?</small>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-6">
-
-                        <p><strong>Have you been treated for prostate cancer and would you like to learn about taking care of side effects and symptoms at home?</strong></p>
-                        <div>
-                            <div class="btn btn-default pat-q" name="management" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default pat-q" name="management" data-value="false">No</div><br />
-                            <p style="display: none; margin-top: 1em;  font-style: italic">Great, we suggest viewing <strong>Self Management</strong>.</p>
-                        </div>
-                        <br />
-
-                    </div>
-                    <div class="col-xs-6">
-                        <a id="management" href="{{ config['SELF_MANAGE_INTERVENTION'] }}"
-                           class="btn btn-block btn-default btn-lg" style="white-space: normal">
-                            Self Management<br />
-                            <small>How do I cope with symptoms?</small>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-xs-6">
-
-                        <p><strong>Would you like to view some other web information on prostate cancer?</strong></p>
-                        <div>
-                            <div class="btn btn-default pat-q" name="links" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default pat-q" name="links" data-value="false">No</div><br />
-                            <p style="display: none; margin-top: 1em; font-style: italic">Great, we suggest viewing <strong>Web Resources</strong>.</p>
-                        </div>
-                        <br />
-
-                    </div>
-                    <div class="col-xs-6">
-                        <a id="links" href='/home'
-                           class="btn btn-block btn-default btn-lg" style="white-space: normal">
-                            Web Resources<br />
-                            <small>Helpful links about prostate cancer</small>
-                        </a>
-                    </div>
-                </div>
-
-                <div id="tellUsMore" style="display: none">
-                    <br /><br />
-                    <h4>Tell Us What Else You'd Like to See</h4>
-                    <p>We're working hard to provide helpful information to men with prostate cancer. What would you like to know about that's not on the TrueNTH website?</p>
-                    <textarea id="tellUsText" class="form-control" rows="3"></textarea>
-                    <div style="margin-top: 1em" id="tellUsSave" class="btn btn-default">Save</div>
-                </div>
-
-
-            </div>
+        </div>
+        <div class="col-xs-6">
+            <h4>Browse TrueNTH Content</h4>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-xs-6">
+
+            <p><strong>Would you like to explore treatment decision-making for early stage prostate cancer?</strong></p>
+            <div>
+                <div class="btn btn-default pat-q" name="decision" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default pat-q" name="decision" data-value="false">No</div><br />
+                <p style="display: none; margin-top: 1em; font-style: italic">Great, we suggest viewing <strong>Decision Support</strong>.</p>
+            </div>
+            <br />
+
+        </div>
+        <div class="col-xs-6">
+            <a id="decision" href="{{ config['DECIDING_INTERVENTION'] }}"
+               class="btn btn-block btn-default btn-lg" style="white-space: normal">
+                Decision Support<br />
+                <small>Which option is best for me?</small>
+            </a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-6">
+
+            <p><strong>Have you been treated for prostate cancer and would you like to learn about taking care of side effects and symptoms at home?</strong></p>
+            <div>
+                <div class="btn btn-default pat-q" name="management" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default pat-q" name="management" data-value="false">No</div><br />
+                <p style="display: none; margin-top: 1em;  font-style: italic">Great, we suggest viewing <strong>Self Management</strong>.</p>
+            </div>
+            <br />
+
+        </div>
+        <div class="col-xs-6">
+            <a id="management" href="{{ config['SELF_MANAGE_INTERVENTION'] }}"
+               class="btn btn-block btn-default btn-lg" style="white-space: normal">
+                Self Management<br />
+                <small>How do I cope with symptoms?</small>
+            </a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-6">
+
+            <p><strong>Would you like to view some other web information on prostate cancer?</strong></p>
+            <div>
+                <div class="btn btn-default pat-q" name="links" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default pat-q" name="links" data-value="false">No</div><br />
+                <p style="display: none; margin-top: 1em; font-style: italic">Great, we suggest viewing <strong>Web Resources</strong>.</p>
+            </div>
+            <br />
+
+        </div>
+        <div class="col-xs-6">
+            <a id="links" href='/home'
+               class="btn btn-block btn-default btn-lg" style="white-space: normal">
+                Web Resources<br />
+                <small>Helpful links about prostate cancer</small>
+            </a>
+        </div>
+    </div>
+
+    <div id="tellUsMore" style="display: none">
+        <br /><br />
+        <h4>Tell Us What Else You'd Like to See</h4>
+        <p>We're working hard to provide helpful information to men with prostate cancer. What would you like to know about that's not on the TrueNTH website?</p>
+        <textarea id="tellUsText" class="form-control" rows="3"></textarea>
+        <div style="margin-top: 1em" id="tellUsSave" class="btn btn-default">Save</div>
+    </div>
+
+
 </div>
+
 <script>
 $(document).ready(function(){
 
