--- a/portal/templates/termsofuse.html
+++ b/portal/templates/termsofuse.html
@@ -1,9 +1,8 @@
 {% extends "layout.html" %}
 {% block main %}
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 col-md-12">
-                <div class="well lead-well">
+
+<div class="well">
+  <h3 class="tnth-headline">TrueNTH Terms of Use</h3>
   <p>
   This [AD-HOC DRAFT 6/5/2015] Privacy Policy applies solely to the True NTH USA website and not to third party websites reached through a link in the True NTH USA website.
 
@@ -22,8 +21,7 @@
   </p><p>
   Information we collect is stored on servers managed by the University of Washington. We use standard security procedures and practices to protect information from unauthorized access, use, or disclosure. However, no data sent over the Internet can be guaranteed to be 100% secure.
   </p>
-                </div>
-            </div>
-        </div>
-    </div>
+
+</div>
+
 {% endblock %}
