--- a/portal/templates/flask_user/forgot_password.html
+++ b/portal/templates/flask_user/forgot_password.html
@@ -3,22 +3,16 @@
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-            <div class="well lead-well">
+<div class="well">
 
-                <h1>{%trans%}Forgot Password{%endtrans%}</h1>
+    <h3>{%trans%}Forgot Password{%endtrans%}</h3>
 
-                <form action="" method="POST" class="form" role="form">
-                    {{ form.hidden_tag() }}
-                    {{ render_field(form.email, tabindex=10) }}
-                    {{ render_submit_field(form.submit, tabindex=90) }}
-                </form>
+    <form action="" method="POST" class="form" role="form">
+        {{ form.hidden_tag() }}
+        {{ render_field(form.email, tabindex=10) }}
+        {{ render_submit_field(form.submit, tabindex=90) }}
+    </form>
 
-            </div>
-        </div>
-    </div>
 </div>
 
 {% endblock %}
