--- a/portal/templates/flask_user/login.html
+++ b/portal/templates/flask_user/login.html
@@ -2,11 +2,9 @@
 
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_checkbox_field, render_submit_field %}
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                <div class="well lead-well">
-                    <h3>TrueNTH</h3>
+
+                <div class="well">
+                    <h3 class="tnth-headline">TrueNTH</h3>
                     <ul>
                         <li style="margin-bottom: 0.25em; font-size: 15px">is a revolutionary new program, funded by the Movember Foundation, that will significantly <strong>improve the physical and mental health of men</strong> diagnosed and living with prostate cancer.</li>
                         <li style="margin-bottom: 0.25em; font-size: 15px">helps men and their families <strong>get their lives back on track</strong> following diagnosis and treatment.</li>
@@ -107,7 +105,5 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
+
 {% endblock %}
