--- a/portal/templates/invite.html
+++ b/portal/templates/invite.html
@@ -1,37 +1,26 @@
 {% extends "layout.html" %}
 {% block main %}
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
-                <div class="well lead-well">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-8">
-                            <h4>Email Invite</h4>
-                            <ul>
-                                
-                                <li style="margin-bottom: 0.25em; font-size: 15px">Send a TrueNTH email invite by filling in the form below.
-                                </li>
-                            </ul>
-                            <form action="/invite" method="post">
-                                <div class="form-group">
-                                    <label for="recipients">To (separate multiple addresses with white space)</label>
-                                    <input type="text" class="form-control" name="recipients" id="recipients" size='79' placeholder="user@example.com">
-                                </div>
-                                <div class="form-group">
-                                    <label for="subject">Subject</label>
-                                    <input type="text" class="form-control" name="subject" id="subject" size='79' value="Invitation to try TrueNTH">
-                                </div>
-                                <div class="form-group">
-                                    <label for="body">Body</label>
-                                    <input type="textarea" class="form-control" name="body" id="body" rows='8' cols='79' value="TrueNTH Invitation">
-                                </div>
-                                <button type="submit" class="btn btn-tnth-primary">Send Invite</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<div class="well">
+
+    <h3 class="tnth-headline">Email Invite</h3>
+    <p>Send a TrueNTH email invite by filling in the form below.</p>
+    <form action="/invite" method="post">
+        <div class="form-group">
+            <label for="recipients">To (separate multiple addresses with white space)</label>
+            <input type="text" class="form-control" name="recipients" id="recipients" size='79' placeholder="user@example.com">
         </div>
-    </div>
+        <div class="form-group">
+            <label for="subject">Subject</label>
+            <input type="text" class="form-control" name="subject" id="subject" size='79' value="Invitation to try TrueNTH">
+        </div>
+        <div class="form-group">
+            <label for="body">Body</label>
+            <input type="textarea" class="form-control" name="body" id="body" rows='8' cols='79' value="TrueNTH Invitation">
+        </div>
+        <button type="submit" class="btn btn-tnth-primary">Send Invite</button>
+    </form>
+
+</div>
+
 {% endblock %}
