--- a/portal/templates/invite_sent.html
+++ b/portal/templates/invite_sent.html
@@ -1,34 +1,30 @@
 {% extends "layout.html" %}
 {% block main %}
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+{% from "flask_user/_macros.html" import back_btn %}
 
-                <div class="well lead-well">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-8">
-                            <h4>Email Invite Sent</h4>
-                                <div class="form-group">
-                                    <label for="recipients">To</label>
-                                    <input type="text" class="form-control" name="recipients" id="recipients" size='79' value="{{ message.recipients }}" readonly>
-                                </div>
-                                <div class="form-group">
-                                    <label for="sent_on">Sent</label>
-                                    <input type="text" class="form-control" name="subject" id="subject" size='79' value="{{ message.sent_at.strftime('%m/%d/%Y %H:%M:%S') }}" readonly>
-                                </div>
-                                <div class="form-group">
-                                    <label for="subject">Subject</label>
-                                    <input type="text" class="form-control" name="subject" id="subject" size='79' value="{{ message.subject }}" readonly>
-                                </div>
-                                <div class="form-group">
-                                    <label for="body">Message</label>
-                                    <input type="textarea" class="form-control" name="body" id="body" rows='8' cols='79' value="{{ message.body }}" readonly>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<div class="well">
 
+    {{ back_btn('invite','Email Invite') }}
+
+    <h3 class="tnth-headline">Email Invite Sent</h3>
+    <div class="form-group">
+        <label for="recipients">To</label>
+        <input type="text" class="form-control" name="recipients" id="recipients" size='79' value="{{ message.recipients }}" readonly>
     </div>
+    <div class="form-group">
+        <label for="sent_on">Sent</label>
+        <input type="text" class="form-control" name="subject" id="subject" size='79' value="{{ message.sent_at.strftime('%m/%d/%Y %H:%M:%S') }}" readonly>
+    </div>
+    <div class="form-group">
+        <label for="subject">Subject</label>
+        <input type="text" class="form-control" name="subject" id="subject" size='79' value="{{ message.subject }}" readonly>
+    </div>
+    <div class="form-group">
+        <label for="body">Message</label>
+        <input type="textarea" class="form-control" name="body" id="body" rows='8' cols='79' value="{{ message.body }}" readonly>
+    </div>
+
+</div>
+
 {% endblock %}
+
