--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -46,8 +46,45 @@
         {%- endwith %}
     {% endblock %}
 
-{% block main %}
-{% endblock %}
+        <div class="container">
+            <div class="row">
+
+                <div class="col-sm-3 hidden-xs">
+
+                    <div class="list-group tnth-nav-list">
+                        <a class="list-group-item" href="{{PORTAL}}/">Home</a>
+                        {% if current_user.roles %}
+                        <a class="list-group-item" href="{{PORTAL}}/profile">My TrueNTH Profile</a>
+                        <a class="list-group-item" href="{{PORTAL}}/invite">Send an Invite</a>
+                        {% endif %}
+                        <a class="list-group-item" href="#">TrueBLOG</a>
+                        <a class="list-group-item" href="http://www.movember.com">Movember.com</a>
+                    </div>
+                    {% if current_user.roles %}
+                    <br />
+
+                    {% if current_user.has_roles('admin') or current_user.has_roles('application_developer') %}
+                    <div class="list-group tnth-nav-list">
+                        {% if current_user.has_roles('admin') %}
+                        <a class="list-group-item" href="{{PORTAL}}/admin">User Administration</a>
+                        {% endif %}
+                        {% if current_user.has_roles('application_developer') %}
+                        <a class="list-group-item" href="{{PORTAL}}/clients">Client Applications</a>
+                        {% endif %}
+                    </div>
+                    {% endif %}
+                    {% endif %}
+
+                </div>
+
+                <div class="col-sm-9">
+
+                    {% block main %}
+                    {% endblock %}
+
+            </div>
+        </div>
+    </div> <!-- <div id="main-div" class="with-margins"> -->
 <script>
 PORTAL_NAV_PAGE = window.location.protocol+"//"+window.location.host+"/api/portal-wrapper-html/";
 PORTAL_HOSTNAME = new URL(PORTAL_NAV_PAGE).hostname;
