--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -1,72 +1,9 @@
 {% extends "layout.html" %}
 {% block main %}
-    <div class="container hide-initial" id="allContent">
-        <div class="row">
-            <div class="col-sm-6 col-md-4">
-                <div class="well lead-well int-cards">
-                    <h3>Decision Support</h3>
-                    <div class="int-sub">Which option is best for me?</div>
-                    <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
-                    <a href="{{ config['DECIDING_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Decision Support <i class="fa fa-chevron-right"></i></a>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <div class="well lead-well int-cards">
-                    <h3>Self Management</h3>
-                    <div class="int-sub">How do I cope with my symptoms?</div>
-                    <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated with prostate cancer.  Learn strategies to address those symptoms, specifically for men like you.</p>
-                    <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Self Management <i class="fa fa-chevron-right"></i></a></p>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <div class="well lead-well int-cards">
-                    <h3>Care Plan</h3>
-                    <div class="int-sub">How do I move forward after treatment?</div>
-                    <p>You’ve been treated for prostate cancer, so what’s next? Develop a customized survivorship plan, to help remind you of your health needs as you move back to the care of your regular doctor.</p>
-                    <a href="{{ config['CARE_PLAN_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Care Plan <i class="fa fa-chevron-right"></i></a>
-                </div>
-            </div>
-
-
-            <div class="col-sm-6 col-md-4">
-                <div class="well lead-well int-cards">
-                    <h3>Community of Wellness</h3>
-                    <div class="int-sub">How can I be healthy?</div>
-                    <p>Health covers a broad range of topics, including exercise, diet, friends and social environments. Learn how to improve your overall health as you progress through your treatment.</p>
-                    <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Community of Wellness <i class="fa fa-chevron-right"></i></button></p>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <div class="well lead-well int-cards">
-                    <h3>Sexual Recovery</h3>
-                    <div class="int-sub">What about sex?</div>
-                    <p>Treatment can impact sexual function. Assess your particular needs and see specific strategies for both you and your partner to develop a new normal in your sex life.</p>
-                    <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Sexual Recovery <i class="fa fa-chevron-right"></i></button></p>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <div class="well lead-well int-cards">
-                    <h3>Social Support Network</h3>
-                    <div class="int-sub">Who can I talk with?</div>
-                    <p>Find out how to connect with others who've experienced what you're going through. Building a strong support network leads to better outcomes.</p>
-                    <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Social Support Network <i class="fa fa-chevron-right"></i></button></p>
-                </div>
-            </div>                        
-        </div>        
-    </div>
-
-<div class="container hide-initial" id="conditionalContent">
+{% from "flask_user/_macros.html" import left_nav %}
+<div class="hide-initial" id="allContent">
     <div class="row">
-        <div class="col-xs-12">
-            <div class="well" style="margin: 2em auto">
-                <h2>TrueNth</h2>
-                <p data-ans-count="0" class="hide-initial">You have told us that you have not yet had a prostate cancer biopsy. You can browse through our information on prostate cancer:</p>
-                <p data-ans-count="1" class="hide-initial">You have told us that you do not yet know if you have prostate cancer, or you have been told you do not have prostate cancer.  You may wish to look at the options below:</p>
-                <p data-ans-count="2" class="hide-initial">You have told us that you have been diagnosed but have not yet started treatment. Would you like to:</p>
-                <p data-ans-count="3" class="hide-initial">You have told us that you have already begun treatment. Would you like to:</p>
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-6 hide-initial" id="p3p">
+        <div class="col-sm-6 col-md-4">
             <div class="well lead-well int-cards">
                 <h3>Decision Support</h3>
                 <div class="int-sub">Which option is best for me?</div>
@@ -74,7 +11,7 @@
                 <a href="{{ config['DECIDING_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Decision Support <i class="fa fa-chevron-right"></i></a>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-6 hide-initial" id="sm">
+        <div class="col-sm-6 col-md-4">
             <div class="well lead-well int-cards">
                 <h3>Self Management</h3>
                 <div class="int-sub">How do I cope with my symptoms?</div>
@@ -82,64 +19,126 @@
                 <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Self Management <i class="fa fa-chevron-right"></i></a></p>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-6" id="infoPage">
+        <div class="col-sm-6 col-md-4">
             <div class="well lead-well int-cards">
-                <h3>Information Page</h3>
-                <div class="int-sub">Links and whatnot</div>
-                <p>Generic links would either be here or be listed on a sub-page.</p>
-                <a href="#" class="btn btn-primary btn-tnth-primary">Info Page <i class="fa fa-chevron-right"></i></a>
+                <h3>Care Plan</h3>
+                <div class="int-sub">How do I move forward after treatment?</div>
+                <p>You’ve been treated for prostate cancer, so what’s next? Develop a customized survivorship plan, to help remind you of your health needs as you move back to the care of your regular doctor.</p>
+                <a href="{{ config['CARE_PLAN_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Care Plan <i class="fa fa-chevron-right"></i></a>
             </div>
         </div>
 
-        <div class="col-xs-12" id="otherInterventions">
-            <div class="well">
-                <h2 style="margin-top: 0">Other Interventions</h2>
-                <p><small>For demo use</small></p>
-                <div class="row">
-                    <div class="col-xs-10 col-xs-offset-1">
 
-                        <div class="hide-initial" id="otherP3p">
-                            <h3>Decision Support</h3>
-                            <div class="int-sub">Which option is best for me?</div>
-                            <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
-                            <a href="{{ config['DECIDING_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Decision Support <i class="fa fa-chevron-right"></i></a>
-                        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="well lead-well int-cards">
+                <h3>Community of Wellness</h3>
+                <div class="int-sub">How can I be healthy?</div>
+                <p>Health covers a broad range of topics, including exercise, diet, friends and social environments. Learn how to improve your overall health as you progress through your treatment.</p>
+                <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Community of Wellness <i class="fa fa-chevron-right"></i></button></p>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="well lead-well int-cards">
+                <h3>Sexual Recovery</h3>
+                <div class="int-sub">What about sex?</div>
+                <p>Treatment can impact sexual function. Assess your particular needs and see specific strategies for both you and your partner to develop a new normal in your sex life.</p>
+                <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Sexual Recovery <i class="fa fa-chevron-right"></i></button></p>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="well lead-well int-cards">
+                <h3>Social Support Network</h3>
+                <div class="int-sub">Who can I talk with?</div>
+                <p>Find out how to connect with others who've experienced what you're going through. Building a strong support network leads to better outcomes.</p>
+                <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Social Support Network <i class="fa fa-chevron-right"></i></button></p>
+            </div>
+        </div>
+    </div>
+</div>
 
-                        <div class="hide-initial" id="otherSm">
-                            <h3>Self Management</h3>
-                            <div class="int-sub">How do I cope with my symptoms?</div>
-                            <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated with prostate cancer.  Learn strategies to address those symptoms, specifically for men like you.</p>
-                            <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Self Management <i class="fa fa-chevron-right"></i></a></p>
-                        </div>
+<div class="hide-initial" id="conditionalContent">
 
-                        <h3>Care Plan</h3>
-                        <div class="int-sub">How do I move forward after treatment?</div>
-                        <p>You’ve been treated for prostate cancer, so what’s next? Develop a customized survivorship plan, to help remind you of your health needs as you move back to the care of your regular doctor.</p>
-                        <a href="{{ config['CARE_PLAN_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Care Plan <i class="fa fa-chevron-right"></i></a>
+    <div class="well">
+        <h3 class="tnth-headline">TrueNTH</h3>
+        <p data-ans-count="0" class="hide-initial">You have told us that you have not yet had a prostate cancer biopsy. You can browse through our information on prostate cancer:</p>
+        <p data-ans-count="1" class="hide-initial">You have told us that you do not yet know if you have prostate cancer, or you have been told you do not have prostate cancer.  You may wish to look at the options below:</p>
+        <p data-ans-count="2" class="hide-initial">You have told us that you have been diagnosed but have not yet started treatment. Would you like to:</p>
+        <p data-ans-count="3" class="hide-initial">You have told us that you have already begun treatment. Would you like to:</p>
 
-                        <h3>Community of Wellness</h3>
-                        <div class="int-sub">How can I be healthy?</div>
-                        <p>Health covers a broad range of topics, including exercise, diet, friends and social environments. Learn how to improve your overall health as you progress through your treatment.</p>
-                        <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Community of Wellness <i class="fa fa-chevron-right"></i></button></p>
-
-                        <h3>Sexual Recovery</h3>
-                        <div class="int-sub">What about sex?</div>
-                        <p>Treatment can impact sexual function. Assess your particular needs and see specific strategies for both you and your partner to develop a new normal in your sex life.</p>
-                        <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Sexual Recovery <i class="fa fa-chevron-right"></i></button></p>
-
-                        <h3>Social Support Network</h3>
-                        <div class="int-sub">Who can I talk with?</div>
-                        <p>Find out how to connect with others who've experienced what you're going through. Building a strong support network leads to better outcomes.</p>
-                        <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Social Support Network <i class="fa fa-chevron-right"></i></button></p>
-
-                    </div>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 hide-initial" id="p3p">
+                <div class="int-cards lead-well">
+                    <h3>Decision Support</h3>
+                    <div class="int-sub">Which option is best for me?</div>
+                    <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
+                    <a href="{{ config['DECIDING_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Decision Support <i class="fa fa-chevron-right"></i></a>
                 </div>
+            </div>
+            <div class="col-sm-12 col-md-6 hide-initial" id="sm">
+                <div class="int-cards lead-well">
+                    <h3>Self Management</h3>
+                    <div class="int-sub">How do I cope with my symptoms?</div>
+                    <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated with prostate cancer.  Learn strategies to address those symptoms, specifically for men like you.</p>
+                    <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Self Management <i class="fa fa-chevron-right"></i></a></p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6" id="infoPage">
+                <div class="int-cards lead-well">
+                    <h3>Information Page</h3>
+                    <div class="int-sub">Links and whatnot</div>
+                    <p>Generic links would either be here or be listed on a sub-page.</p>
+                    <a href="#" class="btn btn-primary btn-tnth-primary">Info Page <i class="fa fa-chevron-right"></i></a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12 other-interventions">
+
+                <h3>Other Interventions</h3>
+                <p><small>For demo use</small></p>
+
+                <div class="hide-initial" id="otherP3p">
+                    <h4>Decision Support</h4>
+                    <div class="int-sub">Which option is best for me?</div>
+                    <p>You're unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
+                    <a href="{{ config['DECIDING_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Decision Support <i class="fa fa-chevron-right"></i></a>
+                </div>
+
+                <div class="hide-initial" id="otherSm">
+                    <h4>Self Management</h4>
+                    <div class="int-sub">How do I cope with my symptoms?</div>
+                    <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated with prostate cancer.  Learn strategies to address those symptoms, specifically for men like you.</p>
+                    <p><a href="{{ config['SELF_MANAGE_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Self Management <i class="fa fa-chevron-right"></i></a></p>
+                </div>
+
+                <h4>Care Plan</h4>
+                <div class="int-sub">How do I move forward after treatment?</div>
+                <p>You’ve been treated for prostate cancer, so what’s next? Develop a customized survivorship plan, to help remind you of your health needs as you move back to the care of your regular doctor.</p>
+                <a href="{{ config['CARE_PLAN_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Care Plan <i class="fa fa-chevron-right"></i></a>
+
+                <h4>Community of Wellness</h4>
+                <div class="int-sub">How can I be healthy?</div>
+                <p>Health covers a broad range of topics, including exercise, diet, friends and social environments. Learn how to improve your overall health as you progress through your treatment.</p>
+                <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Community of Wellness <i class="fa fa-chevron-right"></i></button></p>
+
+                <h4>Sexual Recovery</h4>
+                <div class="int-sub">What about sex?</div>
+                <p>Treatment can impact sexual function. Assess your particular needs and see specific strategies for both you and your partner to develop a new normal in your sex life.</p>
+                <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Sexual Recovery <i class="fa fa-chevron-right"></i></button></p>
+
+                <h4>Social Support Network</h4>
+                <div class="int-sub">Who can I talk with?</div>
+                <p>Find out how to connect with others who've experienced what you're going through. Building a strong support network leads to better outcomes.</p>
+                <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Social Support Network <i class="fa fa-chevron-right"></i></button></p>
 
 
             </div>
         </div>
 
     </div>
+
 </div>
 
 <script>
